# phishalyzer

./: README.md  requirements.txt
models/: phishing_model.pkl  phishing_model_meta.json
mvp/: analyze_eml.py
mvp/test_emails/: handpicked jobs just for you - Apply now!.eml  sample.eml
phishing-ml-detector/: README.md  pyproject.toml  requirements.txt
phishing-ml-detector/config/: config.yaml
phishing-ml-detector/data/: processed  raw
phishing-ml-detector/notebooks/: exploration.ipynb
phishing-ml-detector/scripts/: export_model.py  ingest_kaggle.py  prepare_data.py
phishing-ml-detector/src/: analyze_eml.py
phishing-ml-detector/src/ml/: dataset.py  features.py  model.py  predict.py
phishing-ml-detector/src/pipeline/: __init__.py  evaluate.py  preprocess.py  train.py
phishing-ml-detector/src/utils/: parsing.py
phishing-ml-detector/tests/: conftest.py  test_analyze_eml.py  test_features.py  test_model.py
phishing-ml-detector/tests/test_emails/: empty_email.eml  malicious_email.eml  no_links_email.eml  suspicious_email.eml  valid_email.eml
