[tool.poetry]
name = "phishing-ml-detector"
version = "0.1.0"
description = "A machine learning-based phishing email detector."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
colorama = "^0.4.4"
email-validator = "^1.1.3"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
numpy = "^1.21.2"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"